# AoC2024

./: .clang-format  .gitignore
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt
src/day01/: CMakeLists.txt  main.cc  solutions.cc  solutions.h
src/day01/test/: unit_tests.cc
tools/: boilerplate_code_generator.sh  update_aochelper.sh
